--- a/ansible/roles/groups_domains/tasks/main.yml
+++ b/ansible/roles/groups_domains/tasks/main.yml
@@ -12,13 +12,14 @@
     ansible_become_pass: "{{domain_password}}"
 
 - name: "Add a domain user/group from another Domain in the multi-domain forest to a domain group : {{domain_server}}"
-  community.windows.win_domain_group_membership:
+  microsoft.ad.group:
     domain_server: "{{domain_server}}"
     domain_username: "{{domain_username}}"
     domain_password: "{{domain_password}}"
     name: "{{item.key}}"
-    members: "{{ item.value }}"
-    state: Present
+    members:
+      add:
+        - "{{ item.value }}"
   with_dict: "{{ domain_groups_members }}"
   register: group_membership
   until: "group_membership is not failed"
