--- a/ad/GOAD/providers/libvirt/Vagrantfile
+++ b/ad/GOAD/providers/libvirt/Vagrantfile
@@ -9,11 +9,11 @@ boxes = [
   # windows server 2019
   { :name => "GOAD-DC02",  :ip => "10.0.22.11", :network => "vm_network", :box => "peru/windows-server-2019-standard-x64-eval", :box_version => "20240201.01", :os => "windows"},
   # windows server 2016
-  { :name => "GOAD-DC03",  :ip => "10.0.22.12", :network => "vm_network", :box => "peru/windows-server-2016-standard-x64-eval", :box_version => "20230505.01", :os => "windows"},
+  { :name => "GOAD-DC03",  :ip => "10.0.22.12", :network => "vm_network", :box => "jborean93/WindowsServer2016", :os => "windows"},
   # windows server 2019
   { :name => "GOAD-SRV02", :ip => "10.0.22.22", :network => "vm_network", :box => "peru/windows-server-2019-standard-x64-eval", :box_version => "20240201.01", :os => "windows"},
   # windows server 2016
-  { :name => "GOAD-SRV03", :ip => "10.0.22.23", :network => "vm_network", :box => "peru/windows-server-2016-standard-x64-eval", :box_version => "20230505.01", :os => "windows"}
+  { :name => "GOAD-SRV03", :ip => "10.0.22.23", :network => "vm_network", :box => "jborean93/WindowsServer2016", :os => "windows"}
 ]
 
 if ENV.has_key?('GOAD_VAGRANT_OPTIONS') and ENV['GOAD_VAGRANT_OPTIONS'].include? "elk"
@@ -28,24 +28,24 @@ end
 # ansible versions boxes : https://app.vagrantup.com/jborean93
 # boxes = [
 #   # windows server 2019
-#   { :name => "DC01",  :ip => "10.0.22.10", :box => "jborean93/WindowsServer2019", :os => "windows"},
+#   { :name => "DC01",  :ip => "10.0.22.10", :box => "peru/windows-server-2019-standard-x64-eval", :os => "windows"},
 #   # windows server 2019
-#   { :name => "DC02",  :ip => "10.0.22.11", :box => "jborean93/WindowsServer2019", :os => "windows"},
+#   { :name => "DC02",  :ip => "10.0.22.11", :box => "peru/windows-server-2019-standard-x64-eval", :os => "windows"},
 #   # windows server 2016
 #   { :name => "DC03",  :ip => "10.0.22.12", :box => "jborean93/WindowsServer2016", :os => "windows"},
 #   # windows server 2019
-#   { :name => "SRV02", :ip => "10.0.22.22", :box => "jborean93/WindowsServer2019", :os => "windows"},
+#   { :name => "SRV02", :ip => "10.0.22.22", :box => "peru/windows-server-2019-standard-x64-eval", :os => "windows"},
 #   # windows server 2016
 #   { :name => "SRV03", :ip => "10.0.22.23", :box => "jborean93/WindowsServer2016", :os => "windows"}
 # ]
 
   config.vm.provider "virtualbox" do |v|
-    v.memory = 4000
+    v.memory = 4096
     v.cpus = 2
   end
 
   config.vm.provider "libvirt" do |v|
-    v.memory = 4000
+    v.memory = 4096
     v.cpus = 2
     v.nested = true
     v.disk_driver :cache => 'none'
@@ -92,6 +92,7 @@ end
       if box[:os] == "windows"
         target.vm.guest = :windows
         target.vm.communicator = "winrm"
+        # target.vm.provision "windows-sysprep"
         target.vm.provision :shell, :path => "../../../../vagrant/Install-WMF3Hotfix.ps1", privileged: false
         target.vm.provision :shell, :path => "../../../../vagrant/ConfigureRemotingForAnsible.ps1", privileged: false
 
