--- a/ansible/ad-trusts.yml
+++ b/ansible/ad-trusts.yml
@@ -9,8 +9,8 @@
 - name: Trusts configuration prepare
   hosts: trust
   roles:
-  - { role: 'settings/disable_nat_adapter' , tags: 'disable_nat_adapter'}
   - { role: 'dns_conditional_forwarder', tags: 'dns_conditional_forwarder' }
+    #- { role: 'settings/disable_nat_adapter' , tags: 'disable_nat_adapter'}
   vars:
     domain: "{{lab.hosts[dict_key].domain}}"
     remote_forest: "{{lab.domains[domain].trust}}"
