--- a/ansible/roles/commonwkstn/tasks/main.yml
+++ b/ansible/roles/commonwkstn/tasks/main.yml
@@ -12,7 +12,7 @@
     log_path: C:\dns_log.txt
 
 - name: "Add workstation to {{member_domain}}"
-  win_domain_membership:
+  microsoft.ad.membership:
     dns_domain_name: "{{member_domain}}"
     domain_admin_user: "Administrator@{{member_domain}}"
     domain_admin_password: "{{domain_password}}"
@@ -21,7 +21,7 @@
   register: domain_state
 
 - name: Reboot if needed
-  win_reboot:    
+  win_reboot:
     reboot_timeout: 1500
     post_reboot_delay: 100
   when: domain_state.reboot_required
