--- a/ansible/roles/domain_controller/tasks/main.yml
+++ b/ansible/roles/domain_controller/tasks/main.yml
@@ -2,38 +2,41 @@
 # - name: "disable interface {{nat_adapter}} before join domain"
 #   win_shell: netsh interface set interface "{{nat_adapter}}" disable
 
+- name: Prepare env
+  set_fact:
+    nat_adapter: "{{ nat_adapter }}"
+    domain_adapter: "{{ domain_adapter }}"
+    domain: "{{ domain }}"
+
 - name: "disable the registration of the {{nat_adapter}} interface (NAT address) in DNS"
   ansible.windows.win_shell:
-    Get-NetAdapter {{nat_adapter}} | Set-DNSClient -RegisterThisConnectionsAddress $False
+    Get-NetAdapter '{{nat_adapter}}' | Set-DNSClient -RegisterThisConnectionsAddress $False
   when: two_adapters == "yes"
 
 - name: Ensure that domain exists
-  win_domain:
+  microsoft.ad.domain:
     domain_netbios_name: "{{netbios_name}}"
     dns_domain_name: "{{domain}}"
     safe_mode_password: "{{domain_password}}"
+    reboot: true
   register: check_domain
 
-- name: Reboot to complete domain creation
-  win_reboot:
-    reboot_timeout: 900
-    post_reboot_delay: 100
-  when: check_domain.changed
+# - name: Reboot to complete domain creation
+#   win_reboot:
+#     reboot_timeout: 900
+#     post_reboot_delay: 100
+#   when: check_domain.changed
 
 - name: Ensure the server is a domain controller
-  win_domain_controller:
+  microsoft.ad.domain_controller:
     dns_domain_name: "{{domain}}"
     domain_admin_user: "Administrator@{{domain}}"
     domain_admin_password: "{{domain_password}}"
     safe_mode_password: "{{domain_password}}"
     state: domain_controller
+    install_dns: true
+    reboot: true
   register: check_domain_controller
-
-- name: Reboot to complete domain controller setup
-  win_reboot:
-    reboot_timeout: 900
-    post_reboot_delay: 100
-  when: check_domain_controller.changed
 
 # DNSCHANGE
 # - name: "enable interface {{nat_adapter}} after domain joined"
@@ -70,20 +73,21 @@
 #  win_shell: install-packageprovider -name nuget -force
 
 - name: "Install XactiveDirectory"
-  win_psmodule:
-    name: ActiveDirectoryDSC
+  community.windows.win_psmodule:
+    name: ActiveDirectoryDsc
     state: present
 
 - name: Ensure Administrator is part of Enterprise Admins
-  win_domain_group_membership:
+  microsoft.ad.group:
     name: "Enterprise Admins"
     members:
-      - Administrator
-    state: present
+      add:
+        - Administrator
 
 - name: Ensure Administrator is part of Domain Admins
-  win_domain_group_membership:
+  microsoft.ad.group:
     name: "Domain Admins"
     members:
-      - Administrator
+      add:
+        - Administrator
     state: present
