--- a/ansible/roles/member_server/tasks/main.yml
+++ b/ansible/roles/member_server/tasks/main.yml
@@ -1,12 +1,12 @@
 # DNSCHANGE
-- name: "prioritize the {{domain_adapter}} interface (local) as the default for routing"
-  ansible.windows.win_shell:
-    Set-NetIPInterface -InterfaceAlias "{{domain_adapter}}" -InterfaceMetric 10
-  when: two_adapters == "yes"
+# - name: "prioritize the {{domain_adapter}} interface (local) as the default for routing"
+#   ansible.windows.win_shell:
+#     Set-NetIPInterface -InterfaceAlias "{{domain_adapter}}" -InterfaceMetric 10
+#   when: two_adapters == "yes"
 
 - name: "Set configure dns to {{dns_domain}}"
   win_dns_client:
-    adapter_names: "{{domain_adapter}}"
+    adapter_names: "{{nat_adapter}}"
     ipv4_addresses:
     - "{{hostvars[dns_domain].ansible_host}}"
     log_path: C:\dns_log.txt
@@ -18,17 +18,18 @@
     include_management_tools: True
 
 - name: "Add member server"
-  win_domain_membership:
+  microsoft.ad.membership:
     dns_domain_name: "{{member_domain}}"
     domain_admin_user: "Administrator@{{member_domain}}"
     domain_admin_password: "{{domain_password}}"
 #    domain_ou_path: "{{member_domain_ou_path}}"
     state: domain
+    reboot: true
   register: domain_state
 
-- name: Reboot if needed
-  win_reboot:
-    reboot_timeout: 1500
-    post_reboot_delay: 100
-  when: domain_state.reboot_required
+# - name: Reboot if needed
+#   win_reboot:
+#     reboot_timeout: 1500
+#     post_reboot_delay: 100
+#   when: domain_state.reboot_required
 
